# gerrymandering

./: .env.example  .gitignore  Dockerfile  PRZEKAZANIE_DLA_MODELU.txt  README.md  STATUS_PRAC.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: acceptance.md  architecture.md
examples/: small_request.json
frontend/: app.js  index.html  styles.css
src/gerry/: __init__.py  api.py  assembly.py  cli.py  db.py  domain.py  elections.py  exact_stage.py  exports.py  graph.py  law.py  law_archive.py  pipeline.py  postgis_sync.py  real_smoke.py  reconstruction.py  repository.py  scip_solver.py  services.py  settings.py  snapshots.py  solver.py  sources.py  territory.py
src/gerry/resources/: 001_initial.sql  002_snapshot_scoped_precinct_keys.sql  legal_profiles.yaml  teryt_names.json
src/gerry/resources/legal/: manifest.json
tests/: conftest.py  test_api.py  test_assembly.py  test_cli_import.py  test_db.py  test_domain.py  test_elections.py  test_end_to_end.py  test_exports.py  test_frontend.py  test_graph.py  test_law_archive.py  test_law_conditions.py  test_pipeline.py  test_pkw_parser_regression.py  test_postgis_sync.py  test_postgres_integration.py  test_real_data_integration.py  test_reconstruction.py  test_repository.py  test_scenario_import.py  test_scip_solver.py  test_snapshots.py  test_solver.py
