[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gerrymandering-pl"
version = "0.1.0"
description = "Reconstruction, adjacency and certified electoral districting for Poland"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "typer>=0.15,<1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "geopandas>=1.0,<2",
  "shapely>=2.0,<3",
  "pyogrio>=0.10,<1",
  "pyarrow>=18,<22",
  "networkx>=3.4,<4",
  "requests>=2.32,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
solver = ["pyscipopt>=6.2,<7"]
dev = ["pytest>=8.3,<9", "pytest-cov>=6,<7", "httpx>=0.28,<1", "ruff>=0.9,<1"]

[project.scripts]
gerry = "gerry.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gerry"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "gerry/frontend"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"
